--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,7 +27,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository_owner as <account>, for this repo is schubergphilis
-  IMAGE_NAME: ${{ github.repository_owner }}/awsenergylabeler
+  IMAGE_NAME: ${{ github.repository_owner }}/ddnspy
 
 jobs:
   docker:
