--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,12 +2,12 @@ name: docker
 
 # This workflow triggers on different actions:
 # On a new pull request against main:
-# - Lint awsenergylabeler/Dockerfile
+# - Lint Dockerfile
 # - Setup docker build environment
 # - Builds the multi-architecture container but don't push
 #
 # On a push to main or on push of semver tag:
-# - Lint awsenergylabeler/Dockerfile
+# - Lint Dockerfile
 # - Setup docker build and cosign environment
 # - Authenticates to container registry
 # - Builds the multi-architecture container
@@ -38,7 +38,7 @@ jobs:
       # https://github.com/hadolint/hadolint-action
       - uses: hadolint/hadolint-action@v2.0.0
         with:
-          dockerfile: ./awsenergylabeler/Dockerfile
+          dockerfile: ./Dockerfile
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
@@ -82,7 +82,6 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@1cb9d22b932e4832bb29793b7777ec860fc1cde0
         with:
-          context: awsenergylabeler
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
